# MapStableTest

./: .gitignore  PROJECT_SUMMARY.md  README.md  demo_npz_usage.py  example_usage.py  find_token.py  main.py  pyproject.toml  requirements.txt  setup.py  test_imports.py  test_npz_loader.py  token2image.py
configs/: bemapnet_mini.py  bemapnet_trainval.py  example_config.py  maptr.py  maptr_config.py  maptr_mini.py  pivotnet_mini.py  pivotnet_trainval.py  streammapnet_mini.py  streammapnet_trainval.py
examples/: example_usage.py  simple_example.py
src/maptr_stability_eval/: __init__.py
src/maptr_stability_eval/data_parser/: __init__.py  npz_loader.py  nuscenes_parser.py  pkl_loader.py  utils.py
src/maptr_stability_eval/geometry/: __init__.py  coordinate_transform.py  polyline_utils.py
src/maptr_stability_eval/stability/: __init__.py  alignment.py  maptr_assigner.py  metrics.py  metrics_fixed.py  utils.py
src/maptr_stability_eval/utils/: __init__.py  config.py
src/vis/: vis_stability.py  vis_stability_gt.sh  vis_stability_pred.sh
tests/: __init__.py  test_geometry.py
tools/: eval_stability_npz.sh  eval_stability_pkl.sh  vis_groundtruth.sh  vis_prediction.sh
vis/: vis_stability_new.py  vis_stability_pred.sh
